# manicapture

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: camctl.yaml  caminfo.yaml  jointmap.yaml  machineparams.cfg  tagctl.yaml  visualization.rviz
doc/: calibrate_camera.md
hardware/arduino/tactilechip/: tactilechip.ino
launch/: machine.launch  manijoint.launch  manipose.launch  manitactile.launch  system.launch  vis_manipose.rviz  vis_system.rviz
script/: joint_calibration.py  manijoint.py  manipose.py  manitactile.py  tactilevis.py
src/: machine_server.cpp  pose_imager.cpp
urdf/meshes/: base_link.STL  link_11.STL  link_12.STL  link_13.STL  link_14.STL  link_21.STL  link_22.STL  link_23.STL  link_31.STL  link_32.STL  link_33.STL  link_tag.STL
urdf/urdf/: maniexo.csv  maniexo.urdf
