<package format="2">
  <name>manicapture</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for manicapture</p>
    <p>This package contains configuration data, 3D models and launch files
for manicapture robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv</build_depend>

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>opencv</exec_depend>
  
  <export>
    <architecture_independent />
  </export>
</package>
